[package]
name = "async-benchmark"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
smol = "1.2"
futures-lite = "1.11"
tokio = { version = "1.2", features = ["full"] }

[[bench]]
name = "async_benchmark"
harness = false
