[package]
name = "async-benchmark"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.11"
smol = "1.2"
tokio = { git = "https://github.com/yihuang/tokio.git", branch = "zero-interval", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "async_benchmark"
harness = false
